dataset1235/2025-2/610742602/users/2070606917/executions/677928262_4233865845.log
== SUBMISSION (2025-08-26 21:41:40)
-- CODE: 
celsius = float(input())
#Conversão para Fahrenheit
fahrenheit = (celsius * 9/5) + 32
# Impessão com 2 casas decimais
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:39:37)
-- CODE: 
celsius = float(input())
#Conversão
fahenhreit = (celsius * 9/5) + 32
# Impessão com 2 casas decimais
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(fahrenheit, 2))
                ^^^^^^^^^^
NameError: name 'fahrenheit' is not defined. Did you mean: 'fahenhreit'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(fahrenheit, 2))
                ^^^^^^^^^^
NameError: name 'fahrenheit' is not defined. Did you mean: 'fahenhreit'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(fahrenheit, 2))
                ^^^^^^^^^^
NameError: name 'fahrenheit' is not defined. Did you mean: 'fahenhreit'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(fahrenheit, 2))
                ^^^^^^^^^^
NameError: name 'fahrenheit' is not defined. Did you mean: 'fahenhreit'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(fahrenheit, 2))
                ^^^^^^^^^^
NameError: name 'fahrenheit' is not defined. Did you mean: 'fahenhreit'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(fahrenheit, 2))
                ^^^^^^^^^^
NameError: name 'fahrenheit' is not defined. Did you mean: 'fahenhreit'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:39:36)
-- CODE: 
celsius = float(input())
#Conversão
fahenhreit = (celsius * 9/5) + 32
# Impessão com 2 casas decimais
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(fahrenheit, 2))
                ^^^^^^^^^^
NameError: name 'fahrenheit' is not defined. Did you mean: 'fahenhreit'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(fahrenheit, 2))
                ^^^^^^^^^^
NameError: name 'fahrenheit' is not defined. Did you mean: 'fahenhreit'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(fahrenheit, 2))
                ^^^^^^^^^^
NameError: name 'fahrenheit' is not defined. Did you mean: 'fahenhreit'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(fahrenheit, 2))
                ^^^^^^^^^^
NameError: name 'fahrenheit' is not defined. Did you mean: 'fahenhreit'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(fahrenheit, 2))
                ^^^^^^^^^^
NameError: name 'fahrenheit' is not defined. Did you mean: 'fahenhreit'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(fahrenheit, 2))
                ^^^^^^^^^^
NameError: name 'fahrenheit' is not defined. Did you mean: 'fahenhreit'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:41:39)
-- CODE: 
celsius = float(input())
#Conversão para Fahrenheit
fahrenheit = (celsius * 9/5) + 32
# Impessão com 2 casas decimais
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
